--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Alim Portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1 class="headone">Welcome To</h1>
+            <h1 class="headtwo"> <span>Alim Siddique</span> World </h1>
+            <h3>Web Application Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eos distinctio corporis incidunt
+                nostrum
+                voluptates odio eligendi voluptatum sint voluptatem.</p>
+            <a class="link-btn" href="#">Hire Me</a>
+        </div>
+        <div class="half-width" id="main-img">
+            <img src="photos/my-photo.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
