intro part  added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
             <img src="photos/my-photo.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="photos/my-bg2.png" alt="">
+        </div>
+        <div class="half-width" style="padding: 0;">
+            <h1 class="sech1">Dream Big</h1>
+            <h2 class="sech2">Become a web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum delectus libero, nesciunt quae quis
+                voluptatum hic voluptatibus aliquid, dicta quasi aut commodi nam excepturi ullam.</p>
+            <a class="link-btn" target="_target" href="#"> Download Resume </a>
+        </div>
+    </section>
 </body>
 
 </html>
