--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1 class="headone">Welcome To</h1>
-            <h1 class="headtwo"> <span>Alim Siddique</span> World </h1>
+            <h1 class="headtwo"> <span class="orange">Alim Siddique</span> World </h1>
             <h3>Web Application Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eos distinctio corporis incidunt
                 nostrum
@@ -36,6 +36,36 @@
             <a class="link-btn" target="_target" href="#"> Download Resume </a>
         </div>
     </section>
+
+
+
+    <div class="parent">
+        <h1>Experiences</h1>
+        <section class="experience">
+
+            <div class="half-width box" id="exp-dev">
+                <h2 style="margin-bottom: 25px;margin-top: 10px;
+                margin-right: 20px;">Full Stack Developer</h2>
+                <h3 class="orange">2018-present | Pro Level Developer </h3>
+                <p style="margin-top: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis tenetur
+                    qui perspiciatis ducimus,
+                    ut
+                    dolorum est modi doloremque in eligendi quisquam sint eum a iusto quam unde dolore possimus!</p>
+            </div>
+            <div class="half-width box" id="baby-dev">
+                <h2 style="margin-bottom: 25px;margin-top: 10px;
+                margin-right: 15px;">Baby Web Developer</h2>
+                <h3 class="orange">2020-present | Hero Learner </h3>
+                <p style="margin-top: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis tenetur
+                    qui perspiciatis ducimus, dolorum est modi doloremque in eligendi quisquam sint eum a iusto quam
+                    unde dolore possimus!</p>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+        </p>
+    </footer>
 </body>
 
 </html>
