--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </div>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+        <p> &copy;Lorem ipsum dolor sit amet consectetur adipisicing elit
         </p>
     </footer>
 </body>
